[package]
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
categories = ["network-programming", "asynchronous"]
description = """
Codegen module of `tonic` gRPC implementation.
"""
edition = "2021"
homepage = "https://github.com/hyperium/tonic"
keywords = ["rpc", "grpc", "async", "codegen", "protobuf"]
license = "MIT"
name = "tonic-build"
readme = "README.md"
repository = "https://github.com/hyperium/tonic"
version = "0.13.1"
rust-version = { workspace = true }

[dependencies]
prettyplease = { version = "0.2" }
proc-macro2 = "1.0"
prost-build = { version = "0.13", optional = true }
prost-types = { version = "0.13", optional = true }
quote = "1.0"
syn = "2.0"

[features]
default = ["transport", "prost"]
prost = ["prost-build", "dep:prost-types"]
cleanup-markdown = ["prost-build?/cleanup-markdown"]
transport = []

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo_check_external_types]
allowed_external_types = [
  # major released
  "proc_macro2::*",

  # not major released
  "prost_build::*",
  "prost_types::*",
]

[workspace]
lints.rust = { missing_debug_implementations = "warn", missing_docs = "warn", rust_2018_idioms = "warn", unreachable_pub = "warn" }
lints.clippy = { uninlined_format_args = "deny" }
lints.rustdoc = { broken_intra_doc_links = "deny" }
package = { rust-version = "1.75" }
